syntax = "proto3";

package nch;
option csharp_namespace = "O24OpenAPI.Grpc.NCH";

import "Common/common.proto";

// Service
service NCHGrpcService {
  rpc SendNotification (SendNotificationRequest) returns (common.GrpcResponse);
  rpc CreateZaloOAToken (CreateZaloTokenRequest) returns (common.GrpcResponse);
}

// Request message
message SendNotificationRequest {
  string user_code = 1;
  string login_name = 2;
  string purpose = 3;
  string notification_type = 4;
  string receiver_mail = 5;
  string data = 6;
  string data_template = 7;
  string mime_entities = 8;
  string message = 9;
}

// Request message
message CreateZaloTokenRequest {
  string oa_id = 1;
  string app_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  string expires_in = 5;
}